# agrovision

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: agrovision.json
docs/: LINK.txt
exports/: agrovision.csv
r/: clima.R  estatisticas.R
specs/: area_spec.py  insumo_spec.py
src/: __init__.py  cli.py  domain.py  storage.py
src/agrovision/: cli.py
