[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agrovision"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["typer>=0.12", "rich>=13"]

[project.scripts]
agrovision = "agrovision.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
